--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Festive&family=Merriweather:wght@300&family=Quattrocento&family=Rock+Salt&family=Sedgwick+Ave+Display&family=Sofia+Sans&family=Unna&display=swap');
   </style>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function() {
+          emailjs.init("FtSdndw9qUmT_GCG_");
+      })();
+  </script>
   
   <body>
     
@@ -209,13 +215,8 @@
     <script src="app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script>AOS.init();</script>
-    <!-- Add this in the head section of your HTML file -->
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script>
-        (function() {
-          emailjs.init("FtSdndw9qUmT_GCG_"); // Replace with your User ID from EmailJS
-      })();
-    </script>
+   
+    
 
   </body>
 
