--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
       <ul class="work_list">
         <li class="project">
           <div class="website1"></div>
-          <h2>Meine eigene Fotografie-Website ist horizontal konzipiert und präsentiert mein Portfolio als Porträtfotograf. Dieses Projekt markiert einen meiner ersten Schritte als Webentwickler, bei dem moderne CSS-Konzepte verwendet wurden, um sicherzustellen, dass das Design harmonisch mit den Bildern verschmilzt.</h2>
+          <p>Meine eigene Fotografie-Website ist horizontal konzipiert und präsentiert mein Portfolio als Porträtfotograf. Dieses Projekt markiert einen meiner ersten Schritte als Webentwickler, bei dem moderne CSS-Konzepte verwendet wurden, um sicherzustellen, dass das Design harmonisch mit den Bildern verschmilzt.</h2>
         </li>
         <li class="project">
           <div class="website2"></div>
-          <h2>Der brasilianische Bundesstaat Espírito Santo zählt zu den bedeutendsten Kaffeeherstellern Brasiliens und beheimatet eine erfolgreiche Kaffeerösterei-Marke. Die Webseite wurde mit dem Ziel konzipiert, die Leidenschaft und Hingabe der Kaffeebauern dieser Region zu präsentieren.</h2>
+          <p>Der brasilianische Bundesstaat Espírito Santo zählt zu den bedeutendsten Kaffeeherstellern Brasiliens und beheimatet eine erfolgreiche Kaffeerösterei-Marke. Die Webseite wurde mit dem Ziel konzipiert, die Leidenschaft und Hingabe der Kaffeebauern dieser Region zu präsentieren.</h2>
         </li>
         <li class="project">
           <div class="website3"></div>
           <div class="end_project">
-          <h2>Die Webseite für die systemische Coach Vanessa Gunia wurde mit dem Ziel entwickelt, eine freundliche und zugängliche Plattform für Menschen zu bieten, die sich für persönliche Entwicklung interessieren. Die Webseite soll eine rasche und einladende Botschaft vermitteln und potenziellen Interessenten in Sachen Selbstentwicklung eine herzliche Anlaufstelle bieten.</h2>
+          <p>Die Webseite für die systemische Coach Vanessa Gunia wurde mit dem Ziel entwickelt, eine freundliche und zugängliche Plattform für Menschen zu bieten, die sich für persönliche Entwicklung interessieren. Die Webseite soll eine rasche und einladende Botschaft vermitteln und potenziellen Interessenten in Sachen Selbstentwicklung eine herzliche Anlaufstelle bieten.</h2>
           </div>
         </li>
       </ul>
@@ -209,7 +209,17 @@
 
     </form>
 
+
   </section>
+
+  <div class="message-success" id="message-success">
+    <h1>Hurra! Deine Nachricht wurde erfolgreich abgeschickt! 😄 Ich freue mich darauf, bald von dir zu hören. Ich melde mich schnellstmöglich zurück!</h1>
+  </div>
+
+  <div class="message-error">
+    <h1>Oh nein! Etwas ist schiefgelaufen. Es tut mir leid für die Unannehmlichkeiten. Bitte versuche es erneut.</h1>
+  </div>
+ 
 
 
     <script src="app.js"></script>
