--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section>
       <div class="menu_items_burger" id="menu_items">
-        <ul id = "items">
+        <ul class="items"  id = "items">
           <li><a href="#logo">Home</a></li>
           <li><a href="#aboutme">Über Gabriel</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
