--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
       <ul class="work_list">
         <li class="project">
-          <div class="website1"></div>
+          
+          <div class="website1" onclick="window.location.href='https://www.costasoares-photography.com';"></div>
           <p>Meine eigene Fotografie-Website ist horizontal konzipiert und präsentiert mein Portfolio als Porträtfotograf. Dieses Projekt markiert einen meiner ersten Schritte als Webentwickler, bei dem moderne CSS-Konzepte verwendet wurden, um sicherzustellen, dass das Design harmonisch mit den Bildern verschmilzt.</h2>
         </li>
         <li class="project">
