--- a/index.html
+++ b/index.html
@@ -135,20 +135,30 @@
 
     <section class="portfolio" id="portfolio">
 
+      <div class="aboutme_container">
+        <div class="about_gabriel">
+          <div class="head_title">
+            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">gabriel's</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">portfolio</h1>
+            <div class="line" data-aos="fade-left" data-aos-duration="1000"></div>
+          </div> 
+        </div>
+      </div>
+
       <ul class="work_list">
         <li class="project">
           
           <div class="website1" onclick="window.location.href='https://www.costasoares-photography.com';"></div>
-          <p>Meine eigene Fotografie-Website ist horizontal konzipiert und präsentiert mein Portfolio als Porträtfotograf. Dieses Projekt markiert einen meiner ersten Schritte als Webentwickler, bei dem moderne CSS-Konzepte verwendet wurden, um sicherzustellen, dass das Design harmonisch mit den Bildern verschmilzt.</h2>
+          <p>Webseite als Porträtfotograf</p>
         </li>
         <li class="project">
           <div class="website2"></div>
-          <p>Der brasilianische Bundesstaat Espírito Santo zählt zu den bedeutendsten Kaffeeherstellern Brasiliens und beheimatet eine erfolgreiche Kaffeerösterei-Marke. Die Webseite wurde mit dem Ziel konzipiert, die Leidenschaft und Hingabe der Kaffeebauern dieser Region zu präsentieren.</h2>
+          <p>Webseite für das brasilianische Unternehmen Espírito Santo</p>
         </li>
         <li class="project">
           <div class="website3"></div>
           <div class="end_project">
-          <p>Die Webseite für die systemische Coach Vanessa Gunia wurde mit dem Ziel entwickelt, eine freundliche und zugängliche Plattform für Menschen zu bieten, die sich für persönliche Entwicklung interessieren. Die Webseite soll eine rasche und einladende Botschaft vermitteln und potenziellen Interessenten in Sachen Selbstentwicklung eine herzliche Anlaufstelle bieten.</h2>
+          <p>Webseite von systemischem Coach Vanessa Gunia</p>
           </div>
         </li>
       </ul>
