--- a/index.html
+++ b/index.html
@@ -111,10 +111,13 @@
         </div>
 
 
-        <div class="photo_title">
-          <h1>Frontend Entwickler</h1>
-          <h1>& Fotograf</h1>
-        </div>
+              
+      <div class="photo_title">
+        <h1>Entwickler für Webanwendungen</h1>
+        <h5>Realisierung und Verbesserung von Anwendungen und Softwareprojekten unter Verwendung von React</h5>
+        <h5>Zuverlässige und effiziente Arbeit Remote</h5>
+        <h5>Backend-Entwicklung mit Python und PHP</h5>
+      </div>
 
     </div>
    
@@ -138,27 +141,51 @@
       <div class="aboutme_container">
         <div class="about_gabriel">
           <div class="head_title">
-            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">gabriel's</h1>
-            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">portfolio</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">einzigartige</h1>
+            <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">projekte</h1>
             <div class="line" data-aos="fade-left" data-aos-duration="1000"></div>
           </div> 
         </div>
       </div>
 
       <ul class="work_list">
+
         <li class="project">
-          
-          <div class="website1" onclick="window.location.href='https://www.costasoares-photography.com';"></div>
-          <p>Webseite als Porträtfotograf</p>
+          <div class="website1-container">
+            <div class="website1"></div>
+            <div class="overlay">
+              <h1>Gabriel Costa Soares Photography</h1>
+              <h2>Konzeption und Umsetzug von meiner Webseite als Porträtfotograf</h2>
+              <a href="https://www.costasoares-photography.com" target="_blank">
+                <h5>Zur Webseite</h5>
+              </a>
+            </div>
+          </div>
         </li>
+
         <li class="project">
-          <div class="website2"></div>
-          <p>Webseite für das brasilianische Unternehmen Espírito Santo</p>
+          <div class="website2-container">
+            <div class="website2"></div>
+            <div class="overlay">
+              <h1>Espírito Santo</h1>
+              <h2>Website des brasilianischem Kaffeeunternehmens</h2>
+              <a href="https://www.costasoares-photography.com" target="_blank">
+                <h5>Zur Webseite</h5>
+              </a>
+            </div>
+          </div>
         </li>
+
         <li class="project">
-          <div class="website3"></div>
-          <div class="end_project">
-          <p>Webseite von systemischem Coach Vanessa Gunia</p>
+          <div class="website3-container">
+            <div class="website3"></div>
+            <div class="overlay">
+              <h1>Vanessa Gunia</h1>
+              <h2>Erstellung der Website von Vanessa Gunia - Systemisches Coaching</h2>
+              <a href="https://www.costasoares-photography.com" target="_blank">
+                <h5>Zur Webseite</h5>
+              </a>
+            </div>
           </div>
         </li>
       </ul>
@@ -224,12 +251,20 @@
   </section>
 
   <div class="message-success" id="message-success">
-    <h1>Hurra! Deine Nachricht wurde erfolgreich abgeschickt! 😄 Ich freue mich darauf, bald von dir zu hören. Ich melde mich schnellstmöglich zurück!</h1>
+    <h1>Hurra! Deine Nachricht wurde erfolgreich abgeschickt! Ich melde mich schnellstmöglich zurück!</h1>
   </div>
 
   <div class="message-error">
     <h1>Oh nein! Etwas ist schiefgelaufen. Es tut mir leid für die Unannehmlichkeiten. Bitte versuche es erneut.</h1>
   </div>
+
+  <footer>
+    <h5>Gabriel Costa Soares</h5>
+    <h5>contact@costasoares-website.com</h5>
+    <h5>+49 15787651099</h5>
+    <h5><a href="./">Datenschutzerklärung</a></h5>
+    <h5><a href="./">Impressum</a></h5>
+  </footer>
  
 
 
