--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
       <ul class="work_list">
 
         <li class="project">
-          <div class="website1-container">
-            <div class="website1"></div>
+          <div class="website1-container" onclick="toggleOverlay('website1-container')">
+            <div class="website1">
+            </div>
             <div class="overlay">
               <h1>Gabriel Costa Soares Photography</h1>
               <h2>Konzeption und Umsetzug von meiner Webseite als Porträtfotograf</h2>
@@ -161,10 +162,13 @@
               </a>
             </div>
           </div>
+
+        
+
         </li>
 
         <li class="project">
-          <div class="website2-container">
+          <div class="website2-container" onclick="toggleOverlay('website2-container')">
             <div class="website2"></div>
             <div class="overlay">
               <h1>Espírito Santo</h1>
@@ -177,7 +181,7 @@
         </li>
 
         <li class="project">
-          <div class="website3-container">
+          <div class="website3-container" onclick="toggleOverlay('website3-container')">
             <div class="website3"></div>
             <div class="overlay">
               <h1>Vanessa Gunia</h1>
