--- a/datenschutz.html
+++ b/datenschutz.html
@@ -2,10 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prata&family=Roboto&display=swap" rel="stylesheet">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Festive&family=Merriweather:wght@300&family=Quattrocento&family=Rock+Salt&family=Sedgwick+Ave+Display&family=Sofia+Sans&family=Unna&display=swap');
+    </style>
 </head>
 <body>
-    <h1>hello world!</h1>
+    <div class="datenschutz">
+        <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:<br></p>
+        <p>Gabriel Costa Soares</p>
+        <p>Maschweg 33</p>
+        <p>49512 Bad Essen</p>
+        <h2>Ihre Betroffenenrechte</h2>
+        <p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte ausüben:</p>
+        <p>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</p>
+        <p>Berichtigung unrichtiger personenbezogener Daten (Art. 16 DSGVO),</p>
+        <p>Löschung Ihrer bei uns gespeicherten Daten (Art. 17 DSGVO),</p>
+        <p>Einschränkung der Datenverarbeitung, sofern wir Ihre Daten aufgrund gesetzlicher Pflichten noch nicht löschen dürfen (Art. 18 DSGVO),</p>
+        <p>Widerspruch gegen die Verarbeitung Ihrer Daten bei uns (Art. 21 DSGVO) und</p>
+        <p>Datenübertragbarkeit, sofern Sie in die Datenverarbeitung eingewilligt haben oder einen Vertrag mit uns abgeschlossen haben (Art. 20 DSGVO).<br></p>
+        <p>Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft widerrufen.</p>
+        <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle zuständige Behörde.</p>
+        <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: https://www.bfdi.bund.de/DE/Service/Anschriften/Laender/Laender-node.html.</p>
+        <h2>Erfassung allgemeiner Informationen beim Besuch unserer Website</h2>
+        <h2>Art und Zweck der Verarbeitung:</h2>
+        <p>Wenn Sie auf unsere Website zugreifen, d.h., wenn Sie sich nicht registrieren oder anderweitig Informationen übermitteln, werden automatisch Informationen allgemeiner Natur erfasst. Diese Informationen (Server-Logfiles) beinhalten etwa die Art des Webbrowsers, das verwendete Betriebssystem, den Domainnamen Ihres Internet-Service-Providers, Ihre IP-Adresse und ähnliches.</p>
+        <p>Sie werden insbesondere zu folgenden Zwecken verarbeitet:</p>
+        <p>Sicherstellung eines problemlosen Verbindungsaufbaus der Website,</p>
+        <p>Sicherstellung einer reibungslosen Nutzung unserer Website,</p>
+        <p>Auswertung der Systemsicherheit und -stabilität sowie</p>
+        <p>zur Optimierung unserer Website.</p>
+        <p>Wir verwenden Ihre Daten nicht, um Rückschlüsse auf Ihre Person zu ziehen. Informationen dieser Art werden von uns ggfs. anonymisiert statistisch ausgewertet, um unseren Internetauftritt und die dahinterstehende Technik zu optimieren.</p>
+        <h2>Rechtsgrundlage und berechtigtes Interesse:</h2>
+        <p>Die Verarbeitung erfolgt gemäß Art. 6 Abs. 1 lit. f DSGVO auf Basis unseres berechtigten Interesses an der Verbesserung der Stabilität und Funktionalität unserer Website.</p>
+        <h2>Empfänger eines Widerspruchs</h2>
+        <p>Gabriel Costa Soares</p>
+        <p>Maschweg 55</p>
+        <p>49512 Bad Essen</p>
+        <h2>Änderung unserer Datenschutzbestimmungen</h2>
+        <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
+        <h2>Fragen an den Datenschutzbeauftragten</h2>
+        <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:</p>
+        <p>Gabriel Costa Soares</p>
+        <p>Maschweg 55</p>
+        <p>49512 Bad Essen<br></p>
+        <p>+49 15787651099</p>
+        <p>contact@gabriel-website.com<br><br></p>
+        <h1><a href="http://www.costasoares-website.com">Zurück zur Website</a></h1>
+   
+   
+    </div>
 </body>
 </html>
