--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
     <h5>Gabriel Costa Soares</h5>
     <h5>contact@costasoares-website.com</h5>
     <h5>+49 15787651099</h5>
-    <h5><a href="./">Datenschutzerklärung</a></h5>
-    <h5><a href="./">Impressum</a></h5>
+    <h5><a href="./datenschutz.html">Datenschutzerklärung</a></h5>
+    <h5><a href="./impressum.html">Impressum</a></h5>
   </footer>
  
 
