--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <h1>Gabriel Costa Soares Photography</h1>
               <h2>Konzeption und Umsetzug von meiner Webseite als Porträtfotograf</h2>
               <a href="https://www.costasoares-photography.com" target="_blank">
-                <h5>Zur Webseite</h5>
+                <h5>Zur Website</h5>
               </a>
             </div>
           </div>
@@ -174,7 +174,7 @@
               <h1>Espírito Santo</h1>
               <h2>Website des brasilianischem Kaffeeunternehmens</h2>
               <a href="https://www.costasoares-photography.com" target="_blank">
-                <h5>Zur Webseite</h5>
+                <h5>Zur Website</h5>
               </a>
             </div>
           </div>
@@ -187,7 +187,7 @@
               <h1>Vanessa Gunia</h1>
               <h2>Erstellung der Website von Vanessa Gunia - Systemisches Coaching</h2>
               <a href="https://www.costasoares-photography.com" target="_blank">
-                <h5>Zur Webseite</h5>
+                <h5>Zur Website</h5>
               </a>
             </div>
           </div>
