--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             <div class="overlay">
               <h1>Gabriel Costa Soares Photography</h1>
-              <h2>Konzeption und Umsetzug von meiner Webseite als Porträtfotograf</h2>
+              <h2>Konzeption und Umsetzug meiner Website als Porträtfotograf</h2>
               <a href="https://www.costasoares-photography.com" target="_blank">
                 <h5>Zur Website</h5>
               </a>
@@ -172,8 +172,8 @@
             <div class="website2"></div>
             <div class="overlay">
               <h1>Espírito Santo</h1>
-              <h2>Website des brasilianischem Kaffeeunternehmens</h2>
-              <a href="https://www.costasoares-photography.com" target="_blank">
+              <h2>Website von Espírito Santo Kaffee</h2>
+              <a href="http://www.espirito-santo-cafe.com/" target="_blank">
                 <h5>Zur Website</h5>
               </a>
             </div>
@@ -186,7 +186,7 @@
             <div class="overlay">
               <h1>Vanessa Gunia</h1>
               <h2>Erstellung der Website von Vanessa Gunia - Systemisches Coaching</h2>
-              <a href="https://www.costasoares-photography.com" target="_blank">
+              <a href="https://www.vanessagunia.com" target="_blank">
                 <h5>Zur Website</h5>
               </a>
             </div>
@@ -234,8 +234,8 @@
       </div>
 
       <div class="form-control">
-          <label id="email_label"  for="username">MEINE EMAIL</label>
-          <input type="email" placeholder="deine Emailadresse" id="email">
+          <label id="email_label"  for="username">MEINE E-MAIL</label>
+          <input type="email" placeholder="deine E-mailadresse" id="email">
           <small>Error message</small>
       </div>
 
