--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
 
                         <div class="hero__scroll-arrow">
                                <div class="scroll-arrow scroll-arrow--vertical">
-                                    <div class="scroll-arrow__content">
+                                <a href="#projects"><div class="scroll-arrow__content">
                                         <strong class="scroll-arrow__label meta">My work</strong>
-                                        <a href="#projects"><div class="pointer">
+                                        <div class="pointer">
                                         <svg width="74" height="102" viewBox="0 0 74 102" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <rect x="34" width="5" height="100" rx="2.5"/>
                                             <path d="M1.67128 66.645C0.622141 65.6104 0.616265 63.9193 1.65819 62.8773V62.8773C2.69501 61.8405 4.37604 61.8405 5.41286 62.8773L37.8733 95.3378C38.8971 96.3616 38.8376 98.0389 37.7438 98.9876V98.9876C36.7595 99.8413 35.2842 99.794 34.3565 98.8792L1.67128 66.645Z"/>
                                             <rect x="69.7695" y="61" width="5.1127" height="51.4558" rx="2.55635" transform="rotate(45 69.7695 61)"/>
                                         </svg>
-                                    </div> </a>
                                     </div>
-                               </div> 
+                                    </div>
+                                </div></a>
                         </div>
                     
                     
