--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     </div>
    </div>
 
-   <script src="app.js"></script>
+   <script type="module" src="./app.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
