--- a/index.html
+++ b/index.html
@@ -73,21 +73,19 @@
                             <div class="hero__title">
                                 <div class="hero__circle">
                                      <div class="circle">
-                                            <svg viewBox="0 0 500 500">  
-                                                <defs>
-                                                <path id="textcircle" d="M250,400
-                                                             a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z" transform="rotate(1,150,250)" />
-                                                </defs>
-                                                <g class="textcircle">
-                                                <text textLength="0">
-                                                  <textPath 
-                                                            xlink:href="#textcircle" 
-                                                            textLength="940">
-                                                            &nbspWeb Development || UI/UX Design || Photography ||
-                                                  </textPath>
-                                                  </text>
-                                                  </g>
-                                                  </svg>
+                                        <svg viewBox="0 0 500 500">  
+                                            <defs>
+                                              <path id="textcircle" d="M250,400 a150,150 0 0,1 0,-300a150,150 0 0,1 0,300Z" transform="rotate(1,150,250)" />
+                                            </defs>
+                                            <g class="textcircle">
+                                              <text>
+                                                <textPath xlink:href="#textcircle" lengthAdjust="spacingAndGlyphs">
+                                                  Web Development || UI/UX Design || Photography ||
+                                                </textPath>
+                                              </text>
+                                            </g>
+                                          </svg>
+                                          
                                         </div>
                                     </div>
                                     <h4>Gabriel Costa Soares</h4>
