--- a/index.html
+++ b/index.html
@@ -272,7 +272,26 @@
                         </section>
                     </section>
                 </div>
-
+                
+                <footer class="footer">
+                    <div class="footer__container">
+                        <div class="container">
+                            <h2>Elevating your online experience</h2>
+                        </div>
+                        <div class="footer__content container">
+                            <p>Gabriel Costa Soares</p>
+                            <p>Maschweg 55</p>
+                            <p>49152 Bad Essen</p>
+                            <p>Germany</p>
+                            <div class="email-address">
+                                <p>contact@costasoares-website.com</p>
+                            </div>
+                            <p>Impressum</p>
+                            <p>Datenschutzerklärung</p>
+                        </div>
+                        
+                    </div>
+                </footer>
 
             </main>
         </div>
