--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                             <h3>Coffee Project</h3>
                                             <p>Indulge in the rich flavors and vibrant culture of Brazil with Café Espírito Santo. Nestled in the heart of this picturesque Brazilian state, our coffee plantation brings you the finest selection of specialty coffee, cultivated with care and passion</p>
                                             <div class="button-row no-margin">
-                                                <div class="button">> To Website</div>
+                                                <a href="https://www.espirito-santo-cafe.com/"><div class="button">> To Website</div></a>
                                             </div>
                                         </div>
                                 </div>
