--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                             <div class="case-study__background">
                                             </div>
                                             <div class="case-study__image">
-                                                <img src="./assets/_a4ce7431-bb1b-4ba9-bc7d-4a09e7ab4691.jpg" alt="">
+                                                <img src="./assets/csrock.jpg" alt="">
                                             </div>
                                         </div>
                                         <div class="case-study-text">
