--- a/index.html
+++ b/index.html
@@ -323,5 +323,15 @@
 
    <script src="./app.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+   <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("FtSdndw9qUmT_GCG_"); 
+        })();
+    </script>
+
+
+   
 </body>
 </html>
