--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caprasimo&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Costa Soares Website</title>
 </head>
 <body>
@@ -150,8 +149,8 @@
                                         </div>
                                         <div class="case-study-text">
                                             <h5>CS Rock</h5>
-                                            <h3>Magazine Project</h3>
-                                            <p>CS Rock is a dynamic magazine website celebrating culture, crafted using WordPress and JavaScript. It features engaging articles, vibrant visuals, and an interactive design.
+                                            <h3>Events</h3>
+                                            <p>CS-Rock is an event portal built using WordPress ACF (Advanced Custom Fields) for event management, along with PHP programming. This website was designed to manage and showcase events taking place in Vila Velha, Brazil.
                                             </p>
                                             <div class="button-row no-margin">
                                                 <a href="https://cs-rock.com/"><div class="button">> To Website</div></a>
@@ -172,7 +171,7 @@
                                                     <h3>My own website as photographer</h3>
                                                     <p>Immersing myself in the creative process, I've envisioned a website that exudes the essence of my photographic journey—a dynamic, horizontal layout meticulously crafted to evoke a sense of fluidity and seamless exploration</p>
                                                     <div class="button-row no-margin">
-                                                        <a href="https://www.costasoares-photography.com/"><div class="button">> To Website</div></a>
+                                                        <a href="https://gcostasoares.github.io/photography_website/"><div class="button">> To Website</div></a>
                                                     </div>
                                                 </div>
                                         </div>
@@ -233,7 +232,7 @@
                                     </div>
                                     <div class="about-me__text">
                                         <h3>That's me</h3>
-                                        <p>As a Frontend Developer, I love building websites and apps that people enjoy using. I use tools like Vue, Sass and Django to create interfaces that are both intuitive and visually appealing. My goal is to make digital experiences seamless across different devices, and I'm always keeping an eye out for new trends and techniques to improve my work.</p>
+                                        <p>My name is Gabriel Costa Soares, a passionate and skilled web developer with extensive experience in Vue.js, PHP, Python, and WordPress development. Throughout my career, I’ve honed my ability to create dynamic, user-friendly websites that cater to the specific needs of clients, blending both front-end and back-end technologies seamlessly. I have a solid background in Vue.js and WordPress, which I use for building interactive and real-time web applications, as well as PHP for server-side scripting and automation tasks. My approach combines technical proficiency with a strong focus on user experience, allowing me to deliver high-performance websites that are visually appealing and highly functional.</p>
                                     </div>
                                 </div>
 
@@ -302,6 +301,10 @@
                             <h2>Elevating your online experience</h2>
                         </div>
                         <div class="footer__content container">
+                            <p>Gabriel Costa Soares</p>
+                            <p>Maschweg 55</p>
+                            <p>49152 Bad Essen</p>
+                            <p>Germany</p>
                             <div class="email-address">
                                 <p>contact@costasoares-website.com</p>
                             </div>
