--- a/index.html
+++ b/index.html
@@ -138,7 +138,23 @@
                                     <div class="listed-case-study__row">
                                         <div class="case-study">
                                             
-                                    </div>
+                                    </div><div class="case-study">
+                                        <div class="case-study__block">
+                                            <div class="case-study__background">
+                                            </div>
+                                            <div class="case-study__image">
+                                                <img src="./assets/csrock.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="case-study-text">
+                                            <h5>Construtora Vila Velha</h5>
+                                            <h3>Construction Company</h3>
+                                            <p>Construtora Vila Velha is a corporate website built using WordPress with the GeneratePress theme, ensuring a fast and responsive user experience. The site was developed to showcase the construction company's projects, services, and expertise in Vila Velha, Brazil. It features a modern design, intuitive navigation, and optimized performance to provide potential clients with essential information about the company's work.</p>
+                                            <div class="button-row no-margin">
+                                                <a href="https://construtoravilavelha.space/"><div class="button">> To Website</div></a>
+                                            </div>
+                                        </div>
+                                </div>
                                     <div class="case-study">
                                         <div class="case-study__block">
                                             <div class="case-study__background">
