--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                             <div class="case-study__background">
                                             </div>
                                             <div class="case-study__image">
-                                                <img src="./assets/csrock.jpg" alt="">
+                                                <img src="./assets/ConstrutoraVilaVelha.jpg" alt="">
                                             </div>
                                         </div>
                                         <div class="case-study-text">
