--- a/datenschutz.html
+++ b/datenschutz.html
@@ -18,8 +18,8 @@
     <div class="datenschutz">
         <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO), ist:<br></p>
         <p>Gabriel Costa Soares</p>
-        <p>Maschweg 33</p>
-        <p>49512 Bad Essen</p>
+        <p>Rua Santa Alice</p>
+        <p>29101-090 Vila Velha/ES - Brasilien</p>
         <h2>Ihre Betroffenenrechte</h2>
         <p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte ausüben:</p>
         <p>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</p>
