--- a/impressum.html
+++ b/impressum.html
@@ -18,8 +18,8 @@
     <div class="impressum">
         <h2>Angaben gemäß § 5 TMG</h2>
         <p>Gabriel Costa Soares</p>
-        <p>Maschweg 55</p>
-        <p>49152 Bad Essen</p>
+        <p>Rua Santa Alice 55</p>
+        <p>29101-090 Vila Velha / ES - Brasilien</p>
         <h2>Kontakt</h2>
         <p>+49 15787651099</p>
         <p>contact@costasoares-website.com<br><br><br></p>
