--- a/index.html
+++ b/index.html
@@ -306,6 +306,14 @@
                             <div class="email-address">
                                 <p>contact@costasoares-website.com</p>
                             </div>
+
+                            <div class="impressum">
+                                <p><a href="https://costasoares-website/impressum">Impressum</a></p>
+                            </div>
+
+                            <div class="datenschutz">
+                                <p><a href="https://costasoares-website/datenschutz">Datenschutzerklärung</a></p>
+                            </div>
                 
                         </div>
                         
