--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
                             </div>
 
                             <div class="impressum">
-                                <p><a href="https://costasoares-website/impressum">Impressum</a></p>
+                                <p><a href="https://costasoares-website.com/impressum">Impressum</a></p>
                             </div>
 
                             <div class="datenschutz">
-                                <p><a href="https://costasoares-website/datenschutz">Datenschutzerklärung</a></p>
+                                <p><a href="https://costasoares-website.com/datenschutz">Datenschutzerklärung</a></p>
                             </div>
                 
                         </div>
