--- a/datenschutz.html
+++ b/datenschutz.html
@@ -44,15 +44,15 @@
         <p>Die Verarbeitung erfolgt gemäß Art. 6 Abs. 1 lit. f DSGVO auf Basis unseres berechtigten Interesses an der Verbesserung der Stabilität und Funktionalität unserer Website.</p>
         <h2>Empfänger eines Widerspruchs</h2>
         <p>Gabriel Costa Soares</p>
-        <p>Maschweg 55</p>
-        <p>49512 Bad Essen</p>
+        <p>Rua Santa Alice</p>
+        <p>29101-090 Vila Velha/ES - Brasilien</p>
         <h2>Änderung unserer Datenschutzbestimmungen</h2>
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
         <h2>Fragen an den Datenschutzbeauftragten</h2>
         <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:</p>
         <p>Gabriel Costa Soares</p>
-        <p>Maschweg 55</p>
-        <p>49512 Bad Essen<br></p>
+       <p>Rua Santa Alice</p>
+        <p>29101-090 Vila Velha/ES - Brasilien</p>
         <p>+49 15787651099</p>
         <p>contact@gabriel-website.com<br><br></p>
         <h1><a href="http://www.costasoares-website.com">Zurück zur Website</a></h1>
