--- a/impressum.html
+++ b/impressum.html
@@ -16,14 +16,14 @@
     </head>
 <body>
     <div class="impressum">
-        <h2>Angaben gemäß § 5 TMG</h2>
+        <p>Angaben gemäß § 5 TMG</p>
         <p>Gabriel Costa Soares</p>
         <p>Rua Santa Alice 55</p>
         <p>29101-090 Vila Velha / ES - Brasilien</p>
-        <h2>Kontakt</h2>
+        <p>Kontakt</p>
         <p>+49 15787651099</p>
         <p>contact@costasoares-website.com<br><br><br></p>
-        <h1><a href="http://www.costasoares-website.com">Zurück zur Website</a></h1>
+        <p><a href="http://www.costasoares-website.com">Zurück zur Website</a></p>
 
     </div>
 </body>
