--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,7 +20,7 @@
         <p>Gabriel Costa Soares</p>
         <p>Rua Santa Alice</p>
         <p>29101-090 Vila Velha/ES - Brasilien</p>
-        <h2>Ihre Betroffenenrechte</h2>
+        <d>Ihre Betroffenenrechte</d>
         <p>Unter den angegebenen Kontaktdaten unseres Datenschutzbeauftragten können Sie jederzeit folgende Rechte ausüben:</p>
         <p>Auskunft über Ihre bei uns gespeicherten Daten und deren Verarbeitung (Art. 15 DSGVO),</p>
         <p>Berichtigung unrichtiger personenbezogener Daten (Art. 16 DSGVO),</p>
@@ -31,8 +31,8 @@
         <p>Sofern Sie uns eine Einwilligung erteilt haben, können Sie diese jederzeit mit Wirkung für die Zukunft widerrufen.</p>
         <p>Sie können sich jederzeit mit einer Beschwerde an eine Aufsichtsbehörde wenden, z. B. an die zuständige Aufsichtsbehörde des Bundeslands Ihres Wohnsitzes oder an die für uns als verantwortliche Stelle zuständige Behörde.</p>
         <p>Eine Liste der Aufsichtsbehörden (für den nichtöffentlichen Bereich) mit Anschrift finden Sie unter: https://www.bfdi.bund.de/DE/Service/Anschriften/Laender/Laender-node.html.</p>
-        <h2>Erfassung allgemeiner Informationen beim Besuch unserer Website</h2>
-        <h2>Art und Zweck der Verarbeitung:</h2>
+        <d>Erfassung allgemeiner Informationen beim Besuch unserer Website</d>
+        <p>Art und Zweck der Verarbeitung:</p>
         <p>Wenn Sie auf unsere Website zugreifen, d.h., wenn Sie sich nicht registrieren oder anderweitig Informationen übermitteln, werden automatisch Informationen allgemeiner Natur erfasst. Diese Informationen (Server-Logfiles) beinhalten etwa die Art des Webbrowsers, das verwendete Betriebssystem, den Domainnamen Ihres Internet-Service-Providers, Ihre IP-Adresse und ähnliches.</p>
         <p>Sie werden insbesondere zu folgenden Zwecken verarbeitet:</p>
         <p>Sicherstellung eines problemlosen Verbindungsaufbaus der Website,</p>
@@ -40,22 +40,22 @@
         <p>Auswertung der Systemsicherheit und -stabilität sowie</p>
         <p>zur Optimierung unserer Website.</p>
         <p>Wir verwenden Ihre Daten nicht, um Rückschlüsse auf Ihre Person zu ziehen. Informationen dieser Art werden von uns ggfs. anonymisiert statistisch ausgewertet, um unseren Internetauftritt und die dahinterstehende Technik zu optimieren.</p>
-        <h2>Rechtsgrundlage und berechtigtes Interesse:</h2>
+        <p>Rechtsgrundlage und berechtigtes Interesse:</p>
         <p>Die Verarbeitung erfolgt gemäß Art. 6 Abs. 1 lit. f DSGVO auf Basis unseres berechtigten Interesses an der Verbesserung der Stabilität und Funktionalität unserer Website.</p>
-        <h2>Empfänger eines Widerspruchs</h2>
+        <p>Empfänger eines Widerspruchs</p>
         <p>Gabriel Costa Soares</p>
         <p>Rua Santa Alice</p>
         <p>29101-090 Vila Velha/ES - Brasilien</p>
-        <h2>Änderung unserer Datenschutzbestimmungen</h2>
+        <p>Änderung unserer Datenschutzbestimmungen</p>
         <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht oder um Änderungen unserer Leistungen in der Datenschutzerklärung umzusetzen, z.B. bei der Einführung neuer Services. Für Ihren erneuten Besuch gilt dann die neue Datenschutzerklärung.</p>
-        <h2>Fragen an den Datenschutzbeauftragten</h2>
+        <p>Fragen an den Datenschutzbeauftragten</p>
         <p>Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:</p>
         <p>Gabriel Costa Soares</p>
        <p>Rua Santa Alice</p>
         <p>29101-090 Vila Velha/ES - Brasilien</p>
         <p>+49 15787651099</p>
         <p>contact@gabriel-website.com<br><br></p>
-        <h1><a href="http://www.costasoares-website.com">Zurück zur Website</a></h1>
+        <p><a href="http://www.costasoares-website.com">Zurück zur Website</a></p>
    
    
     </div>
