--- a/index.html
+++ b/index.html
@@ -163,6 +163,23 @@
                                                 <img src="./assets/csrock.jpg" alt="">
                                             </div>
                                         </div>
+                                        <div class="case-study">
+                                                <div class="case-study__block">
+                                                    <div class="case-study__background">
+                                                    </div>
+                                                    <div class="case-study__image">
+                                                        <img src="./assets/cariacica.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                
+                                                <div class="case-study-text">
+                                                    <h5>Cariacica Viagens</h5>
+                                                    <h3>Travel Agency</h3>
+                                                    <p>The website of Travel Agent Cariacica Viagens was developed using JavaScript along with WordPress, ensuring a dynamic and seamless user experience. Designed with fluidity in mind, the site offers an immersive and intuitive navigation, reflecting the essence of smooth and effortless exploration.</p>
+                                                    <div class="button-row no-margin">
+                                                        <a href="https://cariacicaviagens.online"><div class="button">> To Website</div></a>
+                                                    </div>
+                                                </div>
                                         <div class="case-study-text">
                                             <h5>CS Rock</h5>
                                             <h3>Events</h3>
