--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                                                         <a href="https://cariacicaviagens.online"><div class="button">> To Website</div></a>
                                                     </div>
                                                 </div>
+                                            </div>
                                         <div class="case-study-text">
                                             <h5>CS Rock</h5>
                                             <h3>Events</h3>
